style.css
header {
  margin: 0px;
  display: flex;
  align-items: center;
  flex-direction: column;
  margin-bottom: 25px;
}
body {
  margin: 0px;
  margin-top: 30px;
  display: flex;
  align-items: center;
  flex-direction: column;
}
main{
  margin: 0 20px;
}
.view {
  width: 100%;
  text-decoration: underline;
  cursor: pointer;
  width: fit-content;
}
.depositAddr,
.tokenID {
  overflow-wrap: anywhere;
}
.depositQr {
  margin: auto;
  display: block;
  width: 70%;
  max-width: 250px;
}
input {
  margin: 2px 0;
}
footer {
  position: absolute;
  width: 100%;
  display: flex;
  justify-content: center;
  bottom: 10px;
}
.githublogo {
  width: 64px;
  position: relative;
  top: -5px;
  left: -5px;
}

